# ergomate-homeassistant

./: .gitignore  AGENTS.md  README.md  hacs.json  pyproject.toml
custom_components/ergomate/: __init__.py  config_flow.py  const.py  cover.py  desk_api.py  desk_const.py  diagnostics.py  entity.py  manifest.json  number.py  sensor.py  strings.json
custom_components/ergomate/translations/: en.json
